--- a/ecommerce-store/app/globals.css
+++ b/ecommerce-store/app/globals.css
@@ -1,6 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.nextjs-static-indicator-toast-icon{
+  display: none;
+}
+
+.nextjs-static-indicator-toast-text{
+  display: none;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
